--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.AdvWeek4NRP"
         tools:targetApi="31">
         <activity
+            android:name=".Navigation"
+            android:exported="false"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/NoActionBar" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="false" />
     </application>
